# nlp100

./: .envrc.example  .gitignore  README.md  pyproject.toml
answer/chapter2/: 16.py  17.py  18.py  19.py
answer/chapter3/: 20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py  utils.py
answer/chapter4/: 30.py  31.py  32.py  33.py  34.py  35.py  36.py  37.py  38.py  39.py  mecab_models.py  utils.py
